# gotham_restful

./: .codecov.yml  .dir-locals.el  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE.md  README.j2  README.md  README.tpl  crates-io.j2  crates-io.md  crates-io.tpl  doc2readme.toml  renovate.json  rustfmt.toml  tarpaulin-report.html  tarpaulin-report.json
.github/: dependabot.yml
.github/workflows/: redoc.yml  rust.yml
.gram/: settings.jsonc
derive/: Cargo.toml
derive/src/: endpoint.rs  from_body.rs  lib.rs  method.rs  openapi_type.rs  private_openapi_trait.rs  request_body.rs  resource.rs  resource_error.rs  util.rs
doc/: .timestamp  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
doc/anyhow/: struct.Error.html
doc/bincode/: all.html  fn.config.html  fn.deserialize.html  fn.deserialize_from.html  fn.deserialize_from_custom.html  fn.options.html  fn.serialize.html  fn.serialize_into.html  fn.serialized_size.html  index.html  type.Error.html
doc/borrow_bag/: all.html  index.html  sidebar-items.js  struct.BorrowBag.html  struct.Handle.html  trait.Append.html  trait.Lookup.html
doc/const_fn/: all.html  attr.const_fn.html  index.html
doc/cookie/: all.html  enum.Expiration.html  enum.ParseError.html  index.html  sidebar-items.js  struct.Cookie.html  struct.CookieBuilder.html  struct.CookieJar.html  struct.Delta.html  struct.Display.html  struct.Iter.html
doc/diesel/: all.html  fn.debug_query.html  fn.delete.html  fn.insert_into.html  fn.insert_or_ignore_into.html  fn.replace_into.html  fn.select.html  fn.sql_query.html  fn.update.html  index.html  macro.allow_tables_to_appear_in_same_query.html  macro.diesel_infix_operator.html  macro.diesel_postfix_operator.html  macro.diesel_prefix_operator.html  macro.impl_query_id.html  macro.joinable.html  macro.no_arg_sql_function.html  macro.not_none.html  macro.numeric_expr.html  macro.operator_allowed.html  macro.sql_function.html  macro.table.html  sidebar-items.js
doc/diesel_derives/: all.html  derive.AsChangeset.html  derive.AsExpression.html  derive.Associations.html  derive.DieselNumericOps.html  derive.FromSqlRow.html  derive.Identifiable.html  derive.Insertable.html  derive.QueryId.html  derive.Queryable.html  derive.QueryableByName.html  derive.SqlType.html  index.html
doc/either/: enum.Either.html
doc/getrandom/: fn.getrandom.html  struct.Error.html
doc/gotham/: all.html  fn.bind_server.html  index.html  sidebar-items.js
doc/gotham_derive/: all.html  derive.NewMiddleware.html  derive.PathExtractor.html  derive.QueryStringExtractor.html  derive.StateData.html  derive.StaticResponseExtender.html  index.html  sidebar-items.js
doc/gotham_middleware_diesel/: all.html  index.html  sidebar-items.js  struct.DieselMiddleware.html  struct.Repo.html
doc/gotham_restful/: all.html  attr.change.html  attr.change_all.html  attr.create.html  attr.delete.html  attr.delete_all.html  attr.endpoint.html  attr.read.html  attr.read_all.html  attr.remove.html  attr.remove_all.html  attr.search.html  attr.update.html  attr.update_all.html  derive.FromBody.html  derive.RequestBody.html  derive.Resource.html  derive.ResourceError.html  enum.AuthError.html  enum.AuthErrorOrOther.html  enum.AuthSource.html  enum.AuthStatus.html  enum.OperationId.html  index.html  sidebar-items.js  struct.AuthError.html  struct.AuthMiddleware.html  struct.AuthValidation.html  struct.NoContent.html  struct.NoopExtractor.html  struct.OpenapiInfo.html  struct.Raw.html  struct.Redirect.html  struct.Response.html  struct.StaticAuthHandler.html  struct.Success.html  trait.AuthHandler.html  trait.DrawResourceRoutes.html  trait.DrawResourceRoutesWithSchema.html  trait.DrawResources.html  (+18 more)
doc/gotham_restful_derive/: all.html  attr.change.html  attr.change_all.html  attr.create.html  attr.delete.html  attr.delete_all.html  attr.endpoint.html  attr.read.html  attr.read_all.html  attr.remove.html  attr.remove_all.html  attr.search.html  attr.update.html  attr.update_all.html  derive.FromBody.html  derive.RequestBody.html  derive.Resource.html  derive.ResourceError.html  index.html  sidebar-items.js
doc/hyper/: all.html  index.html  struct.Body.html
doc/indexmap/: all.html  index.html
doc/indoc/: all.html  index.html  macro.eprintdoc.html  macro.formatdoc.html  macro.indoc.html  macro.printdoc.html  macro.writedoc.html
doc/itertools/: enum.Either.html
doc/jsonwebtoken/: all.html  enum.Algorithm.html  fn.dangerous_insecure_decode.html  fn.dangerous_insecure_decode_with_validation.html  fn.dangerous_unsafe_decode.html  fn.decode.html  fn.decode_header.html  fn.encode.html  index.html  struct.DecodingKey.html  struct.EncodingKey.html  struct.Header.html  struct.TokenData.html  struct.Validation.html
doc/lazy_regex/: all.html  (+17 more)
example/: Cargo.toml
example/src/: main.rs
examples/: users.rs
gotham_restful/: Cargo.toml
gotham_restful/src/: auth.rs  helper.rs  lib.rs  resource.rs  response.rs  result.rs  routing.rs  types.rs
gotham_restful/src/matcher/: accept.rs  content_type.rs  mod.rs
gotham_restful/src/openapi/: builder.rs  mod.rs  operation.rs  router.rs  types.rs
gotham_restful/src/result/: auth_result.rs  mod.rs  no_content.rs  raw.rs  result.rs  success.rs
gotham_restful/tests/: custom_request_body.rs  openapi_supports_scope.rs  trybuild_ui.rs  ui.rs
gotham_restful/tests/ui/: from_body_enum.rs  from_body_enum.stderr
gotham_restful_derive/: Cargo.toml  LICENSE-EPL
gotham_restful_derive/src/: from_body.rs  lib.rs  method.rs  openapi_type.rs  request_body.rs  resource.rs  resource_error.rs  util.rs
redoc/: Cargo.toml
redoc/src/: lib.rs  package-lock.json  package.json  script.min.js  script.ts  tsconfig.json
src/: auth.rs  cors.rs  endpoint.rs  helper.rs  lib.rs  openapi.rs  resource.rs  response.rs  result.rs  routing.rs  types.rs
tests/: async_methods.rs  cors_handling.rs  custom_request_body.rs  openapi_specification.json  openapi_specification.rs  openapi_supports_scope.json  openapi_supports_scope.rs  resource_error.rs  sync_methods.rs  trybuild_ui.rs  users.rs
(+12360 files in other folders)
