# -*- eval: (cargo-minor-mode 1) -*-

[workspace]
members = [".", "./derive"]

[package]
name = "gotham_restful"
version = "0.5.2"
authors = ["Dominic Meiser <git@msrd0.de>"]
edition = "2018"
rust-version = "1.51.0"
description = "RESTful additions for the gotham web framework"
keywords = ["gotham", "rest", "restful", "web", "http"]
categories = ["web-programming", "web-programming::http-server"]
license = "Apache-2.0"
readme = "crates-io.md"
repository = "https://github.com/msrd0/gotham_restful"
include = ["/src/**/*.rs", "/src/openapi/handler/script.min.js", "/LICENSE", "/crates-io.md"]

[dependencies]
futures-core = "0.3.18"
futures-util = "0.3.18"
gotham = { version = "0.7.1", features = ["derive"], default-features = false }
gotham_restful_derive = { version = "0.4.3", path = "./derive" }
log = "0.4.8"
mime = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# non-feature optional dependencies
base64 = { version = "0.13.0", optional = true }
cookie = { version = "0.15", optional = true }
either = { version = "1.6", optional = true }
gotham_middleware_diesel = { version = "0.4.0", optional = true }
jsonwebtoken = { version = "7.2", optional = true }
lazy-regex = { version = "2.2.1", optional = true }
openapi_type = { version = "0.3.0", optional = true }
parking_lot = { version = "0.11.1", optional = true }
sha2 = { version = "0.10.0", optional = true }

[dev-dependencies]
diesel = { version = "1.4.6", features = ["postgres"] }
futures-executor = "0.3.15"
gotham = { version = "0.7.0", features = ["testing"], default-features = false }
paste = "1.0"
pretty_assertions = "1.0"
pretty_env_logger = "0.4"
tokio = { version = "1.6", features = ["time"], default-features = false }
thiserror = "1.0"
trybuild = "=1.0.53"

[features]
default = ["cors", "errorlog", "without-openapi"]
full = ["auth", "cors", "database", "errorlog", "openapi"]

auth = ["gotham_restful_derive/auth", "base64", "cookie", "jsonwebtoken"]
cors = []
database = ["gotham_restful_derive/database", "gotham_middleware_diesel"]
errorlog = []

# These features are exclusive - https://github.com/msrd0/gotham_restful/issues/4
without-openapi = []
openapi = ["gotham_restful_derive/openapi", "base64", "either", "lazy-regex", "openapi_type", "parking_lot", "sha2"]

[package.metadata.docs.rs]
no-default-features = true
features = ["full"]

[patch.crates-io]
gotham_restful = { path = "." }
gotham_restful_derive = { path = "./derive" }
