# -*- eval: (cargo-minor-mode 1) -*-

[workspace]
members = [".", "./derive", "./redoc"]

[package]
name = "gotham_restful"
version = "0.8.3"
authors = ["Dominic Meiser <git@msrd0.de>"]
edition = "2021"
rust-version = "1.65.0"
description = "RESTful additions for the gotham web framework"
keywords = ["gotham", "rest", "restful", "web", "http"]
categories = ["web-programming", "web-programming::http-server"]
license = "Apache-2.0"
readme = "crates-io.md"
repository = "https://github.com/msrd0/gotham_restful"
include = ["/src/**/*.rs", "/LICENSE", "/crates-io.md"]

[dependencies]
futures-core = "0.3.19"
futures-util = "0.3.19"
gotham = { version = "0.7.1", features = ["derive"], default-features = false }
gotham_restful_derive = { version = "0.8.2", path = "./derive" }
log = "0.4.12"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# non-feature optional dependencies
base64 = { version = "0.21", optional = true }
cookie = { version = "0.15", optional = true }
gotham_middleware_diesel = { version = "0.5", optional = true }
gotham_restful_redoc = { version = "0.2.1", path = "./redoc", optional = true }
jsonwebtoken = { version = "8.0", default-features = false, optional = true }
lazy-regex = { version = "2.2.1", optional = true }
openapi_type = { version = "0.4.2", optional = true }
parking_lot = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }

[dev-dependencies]
diesel = { version = "2.0", features = ["postgres"] }
futures-executor = "0.3.19"
gotham = { version = "0.7.1", features = ["testing"], default-features = false }
paste = "1.0"
pretty_assertions = "1.0"
pretty_env_logger = "0.5"
tokio = { version = "1.17", features = ["time"], default-features = false }
thiserror = "1.0"
trybuild = "=1.0.80"

[features]
default = ["cors", "errorlog", "without-openapi"]
full = ["auth", "cors", "database", "errorlog", "openapi"]

auth = ["gotham_restful_derive/auth", "dep:base64", "dep:cookie", "dep:jsonwebtoken"]
cors = []
database = ["gotham_restful_derive/database", "dep:gotham_middleware_diesel"]
errorlog = []

# These features are exclusive - https://github.com/msrd0/gotham_restful/issues/4
without-openapi = []
openapi = ["gotham_restful_derive/openapi", "dep:gotham_restful_redoc", "dep:base64", "dep:lazy-regex", "dep:openapi_type", "dep:parking_lot", "dep:sha2"]

[package.metadata.docs.rs]
no-default-features = true
features = ["full"]

[patch.crates-io]
gotham_restful = { path = "." }
gotham_restful_derive = { path = "./derive" }
