# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "gotham_restful_derive"
version = "0.4.3"
authors = ["Dominic Meiser <git@msrd0.de>"]
edition = "2018"
description = "Derive macros for gotham_restful"
keywords = ["gotham", "rest", "restful", "web", "http"]
license = "Apache-2.0"
repository = "https://github.com/msrd0/gotham_restful"
workspace = ".."

[lib]
proc-macro = true

[dependencies]
lazy-regex = "2.2.1"
paste = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[features]
default = []
auth = []
database = []
openapi = []
