# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "gotham_restful_derive"
version = "0.8.2"
authors = ["Dominic Meiser <git@msrd0.de>"]
edition = "2021"
description = "Private implementation detail of gotham_restful"
keywords = ["gotham", "rest", "restful", "web", "http"]
license = "Apache-2.0"
repository = "https://github.com/msrd0/gotham_restful"
workspace = ".."

[lib]
proc-macro = true

[dependencies]
either = "1.6"
lazy-regex = "3.0"
paste = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
unindent = ">=0.1.4, <0.3"

[features]
default = []
auth = []
database = []
openapi = []
