# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "example"
version = "0.0.1"
authors = ["Dominic Meiser <git@msrd0.de>"]
edition = "2018"
license = "Unlicense"
readme = "README.md"
include = ["src/**/*", "Cargo.toml", "LICENSE"]
repository = "https://gitlab.com/msrd0/gotham-restful"

[badges]
gitlab = { repository = "msrd0/gotham-restful", branch = "master" }

[dependencies]
fake = "2.2.2"
gotham = { version = "0.5.0-rc.1", default-features = false }
gotham_derive = "0.5.0-rc.1"
gotham_restful = { version = "0.1.0-rc0", features = ["auth", "openapi"] }
log = "0.4.8"
log4rs = { version = "0.12.0", features = ["console_appender"], default-features = false }
serde = "1.0.110"
