# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "example"
version = "0.0.0"
authors = ["Dominic Meiser <git@msrd0.de>"]
edition = "2018"
license = "Unlicense"
readme = "README.md"
repository = "https://gitlab.com/msrd0/gotham-restful"
publish = false
workspace = ".."

[badges]
gitlab = { repository = "msrd0/gotham-restful", branch = "master" }

[dependencies]
fake = "2.2.2"
gotham = { version = "0.5.0", default-features = false }
gotham_derive = "0.5.0"
gotham_restful = { version = "0.2.0", features = ["auth", "cors", "openapi"], default-features = false }
log = "0.4.8"
pretty_env_logger = "0.4"
serde = "1.0.110"
