# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "gotham_restful"
version = "0.0.1"
authors = ["Dominic Meiser <git@msrd0.de>"]
edition = "2018"
description = "RESTful additions for Gotham"
keywords = ["gotham", "rest", "restful"]
license = "EPL-2.0 OR Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/msrd0/gotham-restful"

[badges]
gitlab = { repository = "msrd0/gotham-restful", branch = "master" }
codecov = { repository = "msrd0/gotham-restful", branch = "master", service = "gitlab" }

[dependencies]
base64 = { version = "0.11", optional = true }
chrono = { version = "0.4.9", optional = true }
cookie = { version = "0.12", optional = true }
failure = "0.1.6"
futures = "0.1.29"
gotham = "0.4"
gotham_derive = "0.4"
gotham_middleware_diesel = { version = "0.1", optional = true }
gotham_restful_derive = { version = "0.0.1" }
hyper = "0.12.35"
indexmap = { version = "1.3.0", optional = true }
jsonwebtoken = { version = "6.0.1", optional = true }
log = { version = "0.4.8", optional = true }
mime = "0.3.14"
openapiv3 = { version = "0.3", optional = true }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
uuid = { version = ">= 0.1, < 0.9", optional = true }

[dev-dependencies]
thiserror = "1"

[features]
default = []
auth = ["gotham_restful_derive/auth", "base64", "cookie", "jsonwebtoken"]
database = ["gotham_restful_derive/database", "gotham_middleware_diesel"]
openapi = ["gotham_restful_derive/openapi", "indexmap", "log", "openapiv3"]
