# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "gotham_restful"
version = "0.1.0-dev"
authors = ["Dominic Meiser <git@msrd0.de>"]
edition = "2018"
description = "RESTful additions for Gotham"
keywords = ["gotham", "rest", "restful"]
license = "EPL-2.0 OR Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/msrd0/gotham-restful"

[badges]
gitlab = { repository = "msrd0/gotham-restful", branch = "master" }

[dependencies]
base64 = { version = "0.12.0", optional = true }
chrono = { version = "0.4.11", optional = true }
cookie = { version = "0.13.3", optional = true }
futures-core = "0.3.4"
futures-util = "0.3.4"
gotham = { git = "https://github.com/gotham-rs/gotham", version = "0.5.0-dev", default-features = false }
gotham_derive = { git = "https://github.com/gotham-rs/gotham", version = "0.5.0-dev" }
gotham_middleware_diesel = { git = "https://github.com/gotham-rs/gotham", version = "0.1.0", optional = true }
gotham_restful_derive = { version = "0.1.0-dev" }
indexmap = { version = "1.3.2", optional = true }
itertools = "0.9.0"
jsonwebtoken = { version = "7.1.0", optional = true }
log = "0.4.8"
mime = "0.3.16"
openapiv3 = { version = "0.3", optional = true }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
thiserror = "1.0.16"
uuid = { version = "0.8.1", optional = true }

[dev-dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
futures-executor = "0.3.4"
paste = "0.1.12"
trybuild = "1.0.26"

[features]
default = ["errorlog"]
auth = ["gotham_restful_derive/auth", "base64", "cookie", "jsonwebtoken"]
errorlog = []
database = ["gotham_restful_derive/database", "gotham_middleware_diesel"]
openapi = ["gotham_restful_derive/openapi", "indexmap", "openapiv3"]

[package.metadata.docs.rs]
all-features = true
