# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "gotham_restful_derive"
version = "0.0.1"
authors = ["Dominic Meiser <git@msrd0.de>"]
edition = "2018"
description = "RESTful additions for Gotham - Derive"
keywords = ["gotham", "rest", "restful", "derive"]
license = "EPL-2.0"
readme = "../README.md"
include = ["src/**/*", "Cargo.toml", "../LICENSE"]
repository = "https://gitlab.com/msrd0/gotham-restful"

[lib]
proc-macro = true

[badges]
gitlab = { repository = "msrd0/gotham-restful", branch = "master" }

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["extra-traits", "full"] }

[dev-dependencies]
fake = "2.2"
log = "0.4"
log4rs = { version = "0.8", features = ["console_appender"], default-features = false }

[features]
default = ["openapi"]
openapi = []
