# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "gotham_restful_derive"
version = "0.0.1"
authors = ["Dominic Meiser <git@msrd0.de>"]
edition = "2018"
description = "RESTful additions for Gotham - Derive"
keywords = ["gotham", "rest", "restful", "derive"]
license = "EPL-2.0 OR Apache-2.0"
readme = "../README.md"
include = ["src/**/*", "Cargo.toml", "../LICENSE"]
repository = "https://gitlab.com/msrd0/gotham-restful"

[lib]
proc-macro = true

[badges]
gitlab = { repository = "msrd0/gotham-restful", branch = "master" }
codecov = { repository = "msrd0/gotham-restful", branch = "master", service = "gitlab" }

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["extra-traits", "full"] }

[features]
default = ["openapi"]
openapi = []
