# -*- eval: (cargo-minor-mode 1) -*-

[package]
workspace = ".."
name = "gotham_restful_redoc"
version = "0.2.4+2.1.3"
authors = ["Dominic Meiser <git@msrd0.de>"]
edition = "2021"
description = "Private implementation detail of gotham_restful"
license = "Apache-2.0"
repository = "https://github.com/msrd0/gotham_restful"
include = ["/src/lib.rs", "/src/script.min.js", "/LICENSE"]

[dependencies]
base64 = "0.21"
either = "1.6"
sha2 = "0.10"
